# crowfall_parser

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
fixtures/: file1.txt
src/: lib.rs  main.rs
src/dps/: mod.rs
src/heal/: mod.rs
src/split/: mod.rs
static/: index.html  loader.js
