[package]
name = "crowfall_parser"
version = "0.1.0"
authors = ["Aedius <aedius.filmania@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = {  version = "0.2", features = ["serde-serialize"] }